--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -2,7 +2,6 @@
 
 
 // 1 - TOOLS
-//@import '1-tools/bourbon/bourbon'
 @import '1-tools/fonts'
 @import '1-tools/normalize'
 @import '1-tools/vars'
@@ -10,20 +9,18 @@
 
 // 2 - BASICS
 @import '2-basics/body-element'
-//@import '2-basics/selection-colors'
 @import '2-basics/links'
 //@import '2-basics/typography'
+//@import '2-basics/selection-colors'
 
 
-
-// 3 - Modules
+// 3 - MODULES
 @import '3-modules/box'
-//@import '3-modules/example-module-name-lockup'
-//@import '3-modules/example-fork-tag'
-//@import '3-modules/example-flex-video'
+@import '3-modules/nav'
+@import '3-modules/video'
 
 
-// 4 - pages
-@import '4-pages/all-pg'
 
-//@import '4-pages/example-page-home'
+// 4 - PAGES
+@import '4-pages/index'
+@import '4-pages/login'
