--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -10,17 +10,18 @@
 // 2 - BASICS
 @import '2-basics/body-element'
 @import '2-basics/links'
+@import '2-basics/center-page'
 //@import '2-basics/typography'
 //@import '2-basics/selection-colors'
 
 
 // 3 - MODULES
-@import '3-modules/box'
 @import '3-modules/nav'
 @import '3-modules/video'
 
 
 
 // 4 - PAGES
-@import '4-pages/index'
-@import '4-pages/login'
+@import '4-pages/authen'
+@import '4-pages/profile'
+@import '4-pages/gallery'
