--- a/assets/css/2-basics/_links.sass
+++ b/assets/css/2-basics/_links.sass
@@ -1,7 +1,14 @@
 a
-  color: lighten($du-s-blue, 20%)
+  text-decoration: none
 
   &:hover,
   &:focus
-    color: $du-s-blue
     text-decoration: none
+
+button
+  background-color: $du-p-red
+  color: #eee
+
+  &:hover
+    background-color: darken($du-p-red, 20%)
+    transition: all 0.3s ease 0s
