--- a/assets/css/3-modules/_nav.sass
+++ b/assets/css/3-modules/_nav.sass
@@ -2,9 +2,10 @@
   height: 25px
 
 #df-nav-name
-  margin-left: 40px
+  margin-left: 23px 
 
 #footer
+  display: block
   position: absolute
-  width: 100%
   bottom: 0
+  width: 100%
