--- a/assets/css/3-modules/_video.sass
+++ b/assets/css/3-modules/_video.sass
@@ -8,19 +8,46 @@ video
   display: block
   margin-left: auto
   margin-right: auto
-  border-radius: 10px
   position: absolute
   z-index: -1
 
 .video-overlay
-  position: absolute
+  position: relative
+  max-width: 600px
+  height: 400px
+  top: 100px
+  margin-left: auto
+  margin-right: auto
+  border-radius: 10px
+  background-color: rgba(255, 255, 255, 0.7)
   z-index: 1
 
-.jumbotron
-  position: absolute
-  display: block
-  z-index: 2
+.video-overlay-text
+  text-align: center
+  padding: 20px
+
+  h1
+    font-size: 40px
+
+  img
+    height: 200px
+    width: 200px
+
+.video-cta
+  position: relative
   top: 150px
-  left: 30px
-  width: 500px
-  background-color: rgba(255, 255, 255, 0.7)
+
+  button
+    display: block
+    margin-left: auto
+    margin-right: auto
+
+
+@media (max-width: 660px)
+  .video-overlay
+    margin-left: 30px
+    margin-right: 30px
+
+@media (max-width: 500px)
+    video
+      display: none
