--- a/assets/css/2-basics/_body-element.sass
+++ b/assets/css/2-basics/_body-element.sass
@@ -1,8 +1,12 @@
 body
   background-color: $du-n-70
+  height: 100%
   font-size: 14px
   line-height: 1.6
   font-family: 'Oswald', sans-serif
   color: #666
   -webkit-font-smoothing: antialiased
   -webkit-text-size-adjust: 100%
+
+.container-fluid
+  height: 100%
