--- a/assets/css/3-modules/_video.sass
+++ b/assets/css/3-modules/_video.sass
@@ -1,13 +1,11 @@
 .video-container
   display: block
+  text-align: left
 
 video
   opacity: 0.7
-  max-height: 100vh
-  max-width: 100vw
-  display: block
-  margin-left: auto
-  margin-right: auto
+  width: 100%
+  height: auto
   position: absolute
   z-index: -1
 
@@ -36,18 +34,20 @@ video
 .video-cta
   position: relative
   top: 150px
+  z-index: 1
+
 
   button
     display: block
     margin-left: auto
     margin-right: auto
 
+@media (max-width: 1131px)
+  video
+    height: 100vh
+    width: auto
 
 @media (max-width: 660px)
   .video-overlay
     margin-left: 30px
     margin-right: 30px
-
-@media (max-width: 500px)
-    video
-      display: none
