--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -182,12 +182,17 @@ td, th {
 
 body {
   background-color: #4d4d4d;
+  height: 100%;
   font-size: 14px;
   line-height: 1.6;
   font-family: 'Oswald', sans-serif;
   color: #666;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
+}
+
+.container-fluid {
+  height: 100%;
 }
 
 a {
@@ -241,15 +246,13 @@ button:hover {
 
 .video-container {
   display: block;
+  text-align: left;
 }
 
 video {
   opacity: 0.7;
-  max-height: 100vh;
-  max-width: 100vw;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+  width: 100%;
+  height: auto;
   position: absolute;
   z-index: -1;
 }
@@ -283,6 +286,7 @@ video {
 .video-cta {
   position: relative;
   top: 150px;
+  z-index: 1;
 }
 
 .video-cta button {
@@ -291,16 +295,17 @@ video {
   margin-right: auto;
 }
 
+@media (max-width: 1131px) {
+  video {
+    height: 100vh;
+    width: auto;
+  }
+}
+
 @media (max-width: 660px) {
   .video-overlay {
     margin-left: 30px;
     margin-right: 30px;
-  }
-}
-
-@media (max-width: 500px) {
-  video {
-    display: none;
   }
 }
 
