Profile, Layouts, Edits.
Changed the Edit form to be more accommodating.

Added a layout.sass file for things like single-column, double-column,
layouts of my own.

Build a profile page. I don’t know if I want it to be a modal or not…

Tomorrow’s the last day to work on this front end mockup, before the
review on Friday.

Then I get to integrate revisions and put in the database code next
week.

--- a/assets/css/2-basics/_body-element.sass
+++ b/assets/css/2-basics/_body-element.sass
@@ -1,6 +1,7 @@
 body
   background-color: $du-n-70
   height: 100%
+  padding: 0
   font-size: 14px
   line-height: 1.6
   font-family: 'Oswald', sans-serif
@@ -10,3 +11,15 @@ body
 
 .container-fluid
   height: 100%
+
+.footer-container
+  position: relative
+  width: 100%
+  bottom: 0
+
+footer
+  background-color: #191919
+  display: block
+  bottom: 0
+  height: 60px
+  width: 100%
