--- a/assets/css/4-pages/_gallery.sass
+++ b/assets/css/4-pages/_gallery.sass
@@ -5,14 +5,10 @@
   margin: 60px
 
 .box
-  background-color: $du-n-90
-  border: solid 1px $du-p-red
+  //background-color: $du-n-90
+  //border: solid 1px $du-p-red
+  background-color: pink
   height: 200px
   text-align: center
-
-.gall-foot
-  background-color: #191919
-  display: block
-  height: 60px
-  width: 100%
-  margin-bottom: -22px
+  padding-left: 0
+  padding-right: 0
