--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -10,18 +10,19 @@
 // 2 - BASICS
 @import '2-basics/body-element'
 @import '2-basics/links'
-@import '2-basics/center-page'
+@import '2-basics/layouts'
 //@import '2-basics/typography'
 //@import '2-basics/selection-colors'
 
 
 // 3 - MODULES
+@import '3-modules/authen'
 @import '3-modules/nav'
 @import '3-modules/video'
-
+@import '3-modules/modal-profile'
 
 
 // 4 - PAGES
-@import '4-pages/authen'
-@import '4-pages/profile'
+@import '4-pages/edit'
 @import '4-pages/gallery'
+@import '4-pages/profile'
