--- a/assets/css/4-pages/_profile.sass
+++ b/assets/css/4-pages/_profile.sass
@@ -1,1 +1,44 @@
+.proposal-container
+  background-color: #eee
+  border-radius: 5px
 
+  h2
+    padding-top: 20px
+
+
+.blue-box,
+.yellow-box,
+.green-box
+  width: 100%
+  height: 10px
+
+.blue-box
+  background-color: $du-s-blue
+
+.yellow-box
+  background-color: $du-s-yellow
+
+.green-box
+  background-color: $du-s-green
+
+
+.profile-img
+  max-height: 200px
+  max-width: 300px
+  display: block
+  margin: 0 auto
+  border-radius: 5px
+  float: right
+
+@media (max-width: 560px)
+  .profile-img
+    float: none
+
+.twin .btn,
+.twin .number
+  display: inline
+
+
+.prop-answer-container
+  margin: 20px
+  text-align: left
