--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -19,7 +19,7 @@
 @import '3-modules/authen'
 @import '3-modules/nav'
 @import '3-modules/video'
-@import '3-modules/modal-profile'
+//@import '3-modules/modal-profile'
 
 
 // 4 - PAGES
