--- a/assets/css/2-basics/_body-element.sass
+++ b/assets/css/2-basics/_body-element.sass
@@ -1,7 +1,12 @@
+html
+  height: 100%
+
 body
   background-color: $du-n-70
-  height: 100%
-  padding: 0
+  position: relative
+  min-height: 100%
+  margin: 0
+  padding-bottom: 6rem
   font-size: 14px
   line-height: 1.6
   font-family: 'Oswald', sans-serif
@@ -10,16 +15,15 @@ body
   -webkit-text-size-adjust: 100%
 
 .container-fluid
+  display: block
   height: 100%
-
-.footer-container
-  position: relative
-  width: 100%
-  bottom: 0
 
 footer
   background-color: #191919
+  position: absolute
   display: block
+  right: 0
   bottom: 0
-  height: 60px
-  width: 100%
+  left: 0
+  padding: 1rem
+  text-align: center
