--- a/assets/css/2-basics/_layouts.sass
+++ b/assets/css/2-basics/_layouts.sass
@@ -1,14 +1,33 @@
+//Single Column
 .center-container
-  margin-top: 100px
-  text-align: center
+  border-radius: 10px
   max-width: 600px
-  margin-left: auto
-  margin-right: auto
+  margin: 0 auto
+  text-align: center
+
+.field-box
+  background-color: #191919
+
+@media (max-width: 600px)
+  .center-container
+    margin: 0 15px
+
+  .field-box
+    border-radius: 0
+    margin: 0
+
 
 .center-title
+  margin-top: 100px
+  padding: 20px
+
   h1
     color: #eee
 
+.center-form
+  width: 300px
+  padding-bottom: 40px
+  margin: 0 auto
 
 .box-text
   text-align: left
@@ -20,7 +39,6 @@
     font-size: 24px
 
 //Double Column
-
 .left-half, .right-half
   display: inline-block
   width: 50%
