--- a/assets/css/3-modules/_video.sass
+++ b/assets/css/3-modules/_video.sass
@@ -1,53 +1,63 @@
+.container-fluid
+  padding: 0
+
 .video-container
-  display: block
-  text-align: left
+  min-height: 100vh
+  width: 100%
+  margin: 0 auto
+  margin-top: 51px
+
+//Get Video Right
 
 video
+  position: fixed
   opacity: 0.7
-  width: 100%
+  top: 50%
+  left: 50%
+  min-width: 100%
+  min-height: 100%
+  width: auto
   height: auto
-  position: absolute
-  z-index: -1
+  z-index: -100
+  transform: translateX(-50%) translateY(-50%)
+  //background: url('assets/img/.jpg') no-repeat
+  //background-size: cover
+  transition: 1s opacity
 
 .video-overlay
   position: relative
   max-width: 600px
-  height: 400px
-  top: 100px
-  margin-left: auto
-  margin-right: auto
+  height: 300px
   border-radius: 10px
-  background-color: rgba(255, 255, 255, 0.7)
+  top: 10vh
+  bottom: 90vh
+  margin: 50px auto 0px auto
   z-index: 1
+  background-color: rgba(255, 255, 255, 0.7)
 
-.video-overlay-text
+.video-overlay-content
   text-align: center
-  padding: 20px
 
+  h1, img, button
+    display: block
+    margin: 0 auto
   h1
-    font-size: 40px
+    padding-top: 15px
+    font-size: 35px
 
   img
-    height: 200px
-    width: 200px
-
-.video-cta
-  position: relative
-  top: 150px
-  z-index: 1
+    height: 175px
+    width: 175px
 
 
-  button
-    display: block
-    margin-left: auto
-    margin-right: auto
 
-@media (max-width: 1131px)
-  video
-    height: 100vh
-    width: auto
 
-@media (max-width: 660px)
-  .video-overlay
-    margin-left: 30px
-    margin-right: 30px
+
+
+
+//@media (max-width: 1131px)
+
+//@media (max-width: 660px)
+//  .video-overlay
+//    margin-left: 30px
+//    margin-right: 30px
