--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -180,10 +180,16 @@ td, th {
   padding: 0;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   background-color: #4d4d4d;
-  height: 100%;
-  padding: 0;
+  position: relative;
+  min-height: 100%;
+  margin: 0;
+  padding-bottom: 6rem;
   font-size: 14px;
   line-height: 1.6;
   font-family: 'Oswald', sans-serif;
@@ -193,21 +199,19 @@ body {
 }
 
 .container-fluid {
+  display: block;
   height: 100%;
-}
-
-.footer-container {
-  position: relative;
-  width: 100%;
-  bottom: 0;
 }
 
 footer {
   background-color: #191919;
+  position: absolute;
   display: block;
+  right: 0;
   bottom: 0;
-  height: 60px;
-  width: 100%;
+  left: 0;
+  padding: 1rem;
+  text-align: center;
 }
 
 a {
@@ -229,15 +233,39 @@ button:hover {
 }
 
 .center-container {
-  margin-top: 100px;
-  text-align: center;
+  border-radius: 10px;
   max-width: 600px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.field-box {
+  background-color: #191919;
+}
+
+@media (max-width: 600px) {
+  .center-container {
+    margin: 0 15px;
+  }
+  .field-box {
+    border-radius: 0;
+    margin: 0;
+  }
+}
+
+.center-title {
+  margin-top: 100px;
+  padding: 20px;
 }
 
 .center-title h1 {
   color: #eee;
+}
+
+.center-form {
+  width: 300px;
+  padding-bottom: 40px;
+  margin: 0 auto;
 }
 
 .box-text {
@@ -319,124 +347,62 @@ input[type="submit"]:hover {
   margin-left: 23px;
 }
 
-#footer {
-  display: block;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
+.container-fluid {
+  padding: 0;
 }
 
 .video-container {
-  display: block;
-  text-align: left;
+  min-height: 100vh;
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 51px;
 }
 
 video {
+  position: fixed;
   opacity: 0.7;
-  width: 100%;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
   height: auto;
-  position: absolute;
-  z-index: -1;
+  z-index: -100;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+      -ms-transform: translateX(-50%) translateY(-50%);
+          transform: translateX(-50%) translateY(-50%);
+  transition: 1s opacity;
 }
 
 .video-overlay {
   position: relative;
   max-width: 600px;
-  height: 400px;
-  top: 100px;
-  margin-left: auto;
-  margin-right: auto;
+  height: 300px;
   border-radius: 10px;
+  top: 10vh;
+  bottom: 90vh;
+  margin: 50px auto 0px auto;
+  z-index: 1;
   background-color: rgba(255, 255, 255, 0.7);
-  z-index: 1;
 }
 
-.video-overlay-text {
+.video-overlay-content {
   text-align: center;
-  padding: 20px;
 }
 
-.video-overlay-text h1 {
-  font-size: 40px;
-}
-
-.video-overlay-text img {
-  height: 200px;
-  width: 200px;
-}
-
-.video-cta {
-  position: relative;
-  top: 150px;
-  z-index: 1;
-}
-
-.video-cta button {
+.video-overlay-content h1, .video-overlay-content img, .video-overlay-content button {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
 }
 
-@media (max-width: 1131px) {
-  video {
-    height: 100vh;
-    width: auto;
-  }
-}
-
-@media (max-width: 660px) {
-  .video-overlay {
-    margin-left: 30px;
-    margin-right: 30px;
-  }
-}
-
-.overlay {
-  position: relative;
-  height: 100%;
-  width: 100%;
-  display: block;
-  opacity: 0.5;
-}
-
-.overlay:hover {
-  opacity: 1;
-}
-
-.overlay h2 {
+.video-overlay-content h1 {
   padding-top: 15px;
+  font-size: 35px;
 }
 
-.modal {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 1;
-  background-color: rgba(0, 0, 0, 0.65);
-  display: none;
-}
-
-.modal-container {
-  position: absolute;
-  max-width: 500px;
-  background: #fff;
-  padding: 20px;
-  border-radius: 5px;
-  left: 50%;
-  -webkit-transform: translate(-50%);
-      -ms-transform: translate(-50%);
-          transform: translate(-50%);
-  display: none;
-}
-
-.modal:target .modal-container {
-  top: 20px;
-}
-
-.modal-container img {
-  width: 100%;
+.video-overlay-content img {
+  height: 175px;
+  width: 175px;
 }
 
 .edit {
@@ -460,11 +426,6 @@ video {
   border-radius: 5px;
 }
 
-.center-form {
-  width: 300px;
-  margin: 0 auto;
-}
-
 .center-form .radio-container {
   margin-left: 5px;
 }
@@ -474,21 +435,47 @@ video {
 }
 
 .gallery {
+  background-color: #eee;
+  margin: 70px 20px 10px 20px;
+  border-radius: 10px;
+}
+
+@media (max-width: 600px) {
+  .gallery {
+    margin: 40px 10px;
+  }
+}
+
+.gall-head {
   text-align: center;
-  display: block;
-  position: relative;
-  margin: 60px;
 }
 
 .box {
-  background-color: pink;
+  background-color: #1a1a1a;
+  border: solid 1px #717375;
   height: 200px;
   text-align: center;
-  padding-left: 0;
-  padding-right: 0;
+  padding: 0;
+}
+
+.box .overlay {
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 20px;
+}
+
+.box .overlay h2 {
+  margin-top: 0;
+}
+
+.box .overlay button {
+  margin-top: 60px;
 }
 
 .proposal-container {
+  margin-top: 100px;
   background-color: #eee;
   border-radius: 5px;
 }
