--- a/assets/css/2-basics/_layouts.sass
+++ b/assets/css/2-basics/_layouts.sass
@@ -6,7 +6,7 @@
   text-align: center
 
 .field-box
-  background-color: #191919
+  background-color: rgba(0,0,0,0.8)
 
 @media (max-width: 600px)
   .center-container
@@ -39,6 +39,10 @@
     font-size: 24px
 
 //Double Column
+.half-holder
+  width: 100%
+  background-color: $du-n-90
+
 .left-half, .right-half
   display: inline-block
   width: 50%
@@ -52,6 +56,7 @@
 .twin
   width: 300px
   padding: 10px
+  color: #eee
 
 .l-twin
   float: right
