--- a/assets/css/4-pages/_edit.sass
+++ b/assets/css/4-pages/_edit.sass
@@ -7,6 +7,7 @@
 .radio-container
   text-align: left
   max-width: inherit
+  color: #eee
 
 .question-container
   .form-text
@@ -22,3 +23,11 @@
 
   button
     width: 300px
+
+.img-upload
+  height: 50px
+  width: 60px
+  border-radius: 10px
+  background-color: #eee
+  margin: 0 auto
+  margin-bottom: 20px
