--- a/assets/css/4-pages/_profile.sass
+++ b/assets/css/4-pages/_profile.sass
@@ -35,9 +35,9 @@
   .profile-img
     float: none
 
-.twin .btn,
-.twin .number
+.twin .btn
   display: inline
+  margin-top: 20px
 
 
 .prop-answer-container
