--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -19,10 +19,11 @@
 @import '3-modules/authen'
 @import '3-modules/nav'
 @import '3-modules/video'
-//@import '3-modules/modal-profile'
+@import '3-modules/modal-profile'
 
 
 // 4 - PAGES
 @import '4-pages/edit'
 @import '4-pages/gallery'
 @import '4-pages/profile'
+@import '4-pages/register'
