--- a/assets/css/3-modules/_video.sass
+++ b/assets/css/3-modules/_video.sass
@@ -7,8 +7,6 @@
   margin: 0 auto
   margin-top: 51px
 
-//Get Video Right
-
 video
   position: fixed
   opacity: 0.7
@@ -27,13 +25,16 @@ video
 .video-overlay
   position: relative
   max-width: 600px
-  height: 300px
+  height: 400px
   border-radius: 10px
   top: 10vh
-  bottom: 90vh
   margin: 50px auto 0px auto
   z-index: 1
   background-color: rgba(255, 255, 255, 0.7)
+
+@media (max-width: 646px)
+  .video-overlay
+    margin: 50px 15px 0px 15px
 
 .video-overlay-content
   text-align: center
@@ -41,13 +42,18 @@ video
   h1, img, button
     display: block
     margin: 0 auto
+
   h1
-    padding-top: 15px
+    padding-top: 25px
     font-size: 35px
 
   img
     height: 175px
     width: 175px
+    margin-top: 25px
+
+  button
+    margin-top: 25px
 
 
 
