--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -240,7 +240,7 @@ button:hover {
 }
 
 .field-box {
-  background-color: #191919;
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 @media (max-width: 600px) {
@@ -279,6 +279,11 @@ button:hover {
   font-size: 24px;
 }
 
+.half-holder {
+  width: 100%;
+  background-color: #1a1a1a;
+}
+
 .left-half, .right-half {
   display: inline-block;
   width: 50%;
@@ -291,6 +296,7 @@ button:hover {
 .twin {
   width: 300px;
   padding: 10px;
+  color: #eee;
 }
 
 .l-twin {
@@ -339,12 +345,44 @@ input[type="submit"]:hover {
   transition: all 0.3s ease 0s;
 }
 
+.navbar-brand img,
+.navbar-brand p {
+  display: inline;
+}
+
 .navbar-brand img {
   height: 25px;
 }
 
+.navbar-brand p {
+  margin-left: 25px;
+}
+
 #df-nav-name {
   margin-left: 23px;
+  color: #eee;
+  background-color: #cf1c10;
+}
+
+.navbar-brand .short-logo {
+  display: none;
+}
+
+.navbar {
+  border: none;
+  box-shadow: 0 4px 2px -2px black;
+}
+
+@media (max-width: 500px) {
+  .navbar-brand .long-logo {
+    display: none;
+  }
+  .navbar-brand .short-logo {
+    display: inline;
+  }
+  #df-nav-name {
+    margin-left: 40px;
+  }
 }
 
 .container-fluid {
@@ -377,13 +415,18 @@ video {
 .video-overlay {
   position: relative;
   max-width: 600px;
-  height: 300px;
+  height: 400px;
   border-radius: 10px;
   top: 10vh;
-  bottom: 90vh;
   margin: 50px auto 0px auto;
   z-index: 1;
   background-color: rgba(255, 255, 255, 0.7);
+}
+
+@media (max-width: 646px) {
+  .video-overlay {
+    margin: 50px 15px 0px 15px;
+  }
 }
 
 .video-overlay-content {
@@ -396,13 +439,56 @@ video {
 }
 
 .video-overlay-content h1 {
-  padding-top: 15px;
+  padding-top: 25px;
   font-size: 35px;
 }
 
 .video-overlay-content img {
   height: 175px;
   width: 175px;
+  margin-top: 25px;
+}
+
+.video-overlay-content button {
+  margin-top: 25px;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.65);
+  display: none;
+}
+
+.modal-container {
+  display: none;
+  margin: 0 auto;
+}
+
+.modal:target .modal-container {
+  top: 20px;
+}
+
+.modal-close {
+  position: fixed;
+  margin-top: 55px;
+  right: 50px;
+}
+
+.modal-close a {
+  font-size: 30px;
+  font-family: sans-serif;
+  font-weight: 100;
+  color: #ee3124;
+}
+
+.modal-close:hover {
+  color: #a0160c;
+  transition: all 0.3s ease 0s;
 }
 
 .edit {
@@ -416,6 +502,7 @@ video {
 .radio-container {
   text-align: left;
   max-width: inherit;
+  color: #eee;
 }
 
 .question-container .form-text {
@@ -434,10 +521,27 @@ video {
   width: 300px;
 }
 
+.img-upload {
+  height: 50px;
+  width: 60px;
+  border-radius: 10px;
+  background-color: #eee;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
+
 .gallery {
   background-color: #eee;
-  margin: 70px 20px 10px 20px;
+  margin: 70px 40px 10px 40px;
   border-radius: 10px;
+}
+
+.gallery .blue-box, .gallery .yellow-box, .gallery .green-box {
+  height: 20px;
+}
+
+.gallery .green-box {
+  margin-bottom: 20px;
 }
 
 @media (max-width: 600px) {
@@ -447,12 +551,24 @@ video {
 }
 
 .gall-head {
+  margin: 0 auto;
+  margin-bottom: -60px;
   text-align: center;
+  width: 250px;
+  height: 60px;
+}
+
+.gall-head h1 {
+  display: block;
+  color: #eee;
+  background-color: #1a1a1a;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 .box {
   background-color: #1a1a1a;
-  border: solid 1px #717375;
+  border: solid 1px #eee;
   height: 200px;
   text-align: center;
   padding: 0;
@@ -464,14 +580,25 @@ video {
   background-repeat: no-repeat;
   background-position: center;
   padding: 20px;
+  opacity: 0.5;
 }
 
 .box .overlay h2 {
   margin-top: 0;
 }
 
-.box .overlay button {
+.box .overlay svg {
   margin-top: 60px;
+}
+
+.box .overlay:hover {
+  opacity: 1;
+}
+
+@media (max-width: 800px) {
+  .box .overlay {
+    opacity: 1;
+  }
 }
 
 .proposal-container {
@@ -518,12 +645,20 @@ video {
   }
 }
 
-.twin .btn,
-.twin .number {
+.twin .btn {
   display: inline;
+  margin-top: 20px;
 }
 
 .prop-answer-container {
   margin: 20px;
   text-align: left;
+}
+
+.buffer-box {
+  padding-bottom: 50px;
+}
+
+.buffer-box h2 {
+  display: inline;
 }
