--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -17,6 +17,7 @@
 
 // 3 - MODULES
 @import '3-modules/authen'
+@import '3-modules/cards'
 @import '3-modules/nav'
 @import '3-modules/video'
 @import '3-modules/modal-profile'
