--- a/assets/css/4-pages/_gallery.sass
+++ b/assets/css/4-pages/_gallery.sass
@@ -44,6 +44,7 @@
     background-size: cover
     background-repeat: no-repeat
     background-position: center
+    text-align: left
     padding: 20px
     opacity: 0.5
 
