--- a/assets/css/3-modules/_authen.sass
+++ b/assets/css/3-modules/_authen.sass
@@ -1,13 +1,13 @@
 input
   &[type="text"],
-  &[type="password"]
+  &[type="password"],
+  &[type="number"]
     outline: none
     padding: 10px
     display: block
     width: 300px
     border-radius: 3px
     border: 1px solid #eee
-    margin: 20px auto
 
 input
   &[type="submit"]
@@ -24,5 +24,3 @@ input
   &[type="submit"]:hover
       background-color: darken($du-p-red, 20%)
       transition: all 0.3s ease 0s
-
- 
