--- a/assets/css/3-modules/_cards.sass
+++ b/assets/css/3-modules/_cards.sass
@@ -1,13 +1,11 @@
-
-
-#video-card
-
-#login-card
-  //margin-left: 100vw
-
-#register-card
-  //margin-left: 100vw
-
-
+#login-card,
+#register-card,
 #buffer-card
-  //margin-left: 100vw
+  display: none
+
+#login-card,
+#register-card
+  input
+    margin-top: 20px
+  button
+    margin-top: 20px
