--- a/assets/css/4-pages/_profile.sass
+++ b/assets/css/4-pages/_profile.sass
@@ -42,5 +42,20 @@
 
 
 .prop-answer-container
-  margin: 20px
+  margin: 20px 20px 40px 20px
   text-align: left
+
+.gall-back
+  position: relative
+  margin: 0 auto
+  bottom: 20px
+  text-align: center
+  border-radius: 5px
+  height: auto
+  width: 200px
+  opacity: 0.7
+
+  img
+    height: 150px
+.gall-back:hover
+  opacity: 1
