--- a/assets/css/3-modules/_cards.sass
+++ b/assets/css/3-modules/_cards.sass
@@ -1,6 +1,7 @@
 #login-card,
 #register-card,
-#buffer-card
+#buffer-card,
+#corner-logo
   display: none
 
 #login-card,
@@ -9,3 +10,45 @@
     margin-top: 20px
   button
     margin-top: 20px
+
+#buffer-card
+  br
+    display: none
+
+#corner-logo
+  position: fixed
+  width: 200px
+  right: 0
+  bottom: 15vh
+
+  img
+    height: 250px
+    float: right
+    margin-top: 30px
+    margin-right: 30px
+
+@media (max-width: 1024px)
+  #corner-logo
+    bottom: 0
+
+@media (max-width: 768px)
+  #corner-logo img
+    height: 150px
+
+@media (max-width: 500px)
+  .center-title
+    text-align: left
+    margin-left: 15px
+
+  #corner-logo
+    top: 80px
+    img
+      height: 100px
+  #buffer-card
+    .center-title
+      margin-left: 0
+
+      br
+        display: block
+      h1
+        font-size: 25px 
