--- a/assets/css/4-pages/_gallery.sass
+++ b/assets/css/4-pages/_gallery.sass
@@ -36,18 +36,27 @@
     h1
       padding-top: 30px
 
+.like
+  margin-top: 30px
+  height: 30px
+  width: auto
+  cursor: pointer
+
+.like-block
+  display: none
 
 //Gallery Boxes
+
 .box
-  background-color: $du-n-90
+  background-color: $du-n-50
   border: solid 1px #eee
   height: 200px
   text-align: center
   padding: 0
 
-
   .overlay
     height: 100%
+    width: 100%
     background-size: cover
     background-repeat: no-repeat
     background-position: center
@@ -60,7 +69,7 @@
       color: #eee
       text-shadow: 2px 2px #222
 
-    svg
+    .like
       margin-top: 60px
 
   .overlay:hover
