--- a/assets/css/4-pages/_gallery.sass
+++ b/assets/css/4-pages/_gallery.sass
@@ -26,15 +26,16 @@
 
   .gall-title
     text-align: center
-    height: 100px
+    height: 99px
     width: 33%
     background-color: $du-p-red
     color: white
     margin: 0 auto
-    margin-top: -120px
+    margin-top: -126px
 
     h1
-      padding-top: 30px
+      padding-top: 25px
+      font-size: 40px
 
 .like
   margin-top: 30px
@@ -44,6 +45,13 @@
 
 .like-block
   display: none
+
+.overlay-logo
+  position: absolute
+  height: 100px
+  right: 10px
+  bottom: 10px
+  z-index: 1
 
 //Gallery Boxes
 
@@ -69,8 +77,8 @@
       color: #eee
       text-shadow: 2px 2px #222
 
-    .like
-      margin-top: 60px
+    //.like
+      //margin-top: 60px
 
   .overlay:hover
     opacity: 1
