SQL DB INCLUDED
In case my db vanished, I’d really not like to rebuild it all over
again.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -280,6 +280,7 @@ button:hover {
 }
 
 .half-holder {
+  min-height: 200px;
   width: 100%;
   background-color: #4d4d4d;
 }
@@ -698,7 +699,7 @@ video {
   opacity: 0.5;
 }
 
-.box .overlay h2 {
+.box .overlay h2, .box .overlay p {
   margin-top: 0;
   color: #eee;
   text-shadow: 2px 2px #222;
